# payment

./: .gitignore  .vercelignore  README.md  get_discriminator.js  get_discriminators.js  next.config.mjs  package.json  pnpm-lock.yaml  skills-lock.json
anchor/: Anchor.toml  DEPLOY.md  check_all_vaults.js  check_listings.js  check_property.js  check_treasury.js  check_vault.js  temp_id.json
anchor/programs/solestate/: Cargo.toml
anchor/programs/solestate/src/: lib.rs
anchor/scripts/: add-metadata.js  attach-metadata.js  check-disc.js  init.ts  mints-v3.json  mints.json  recover-mints.js  reinit.js  reinit.ts  seed-properties.ts  seed-v3.js  update-metadata.js
anchor/tests/: solestate.ts
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/dashboard/: page.tsx
app/market/: page.tsx
app/marketplace/: page.tsx
app/marketplace/[id]/: page.tsx
app/pitch/: page.tsx
app/portfolio/: page.tsx
components/: SellModal.tsx  footer.tsx  navbar.tsx  property-card.tsx
docs/: BLOCKCHAIN_HISTORY_UPGRADE.md  PURCHASE_HISTORY_SOLUTION.md
lib/: config.ts  p2p-market.ts  properties.ts  purchase-sync.ts  wallet-context.tsx
scripts/: admin.ts  migrate-decimals.ts
solana-program/: DEPLOYMENT_GUIDE.md  lib.rs
solana-program/tests/: purchase-history.test.ts
