[package]
name = "solestate"
version = "0.1.0"
description = "SolEstate — Real World Asset Tokenization on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solestate"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.0", features = ["token", "associated_token", "metadata"] }

[profile.release]
overflow-checks = true
